# packet-detection

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: common.hpp  config.hpp  constants.hpp
include/callback/: cb_hash_partitioner.hpp  cb_producer_delivery_report.hpp  cb_producer_event.hpp
include/io/: config_loader.hpp  daily_logger.hpp  kafka_producer.hpp  pcap_parser.hpp  torch_api.hpp
include/packet/: payload.hpp  superpacket.hpp
include/packet/header/: ethernet_header.hpp  icmp_header.hpp  ipv4_header.hpp  ipv6_header.hpp  packet_header.hpp  tcp_header.hpp  udp_header.hpp
model/: config.properties  keras_model.h5  m2_128.h5  model.ptc
src/: config.cpp  main.cpp
src/callback/: cb_hash_partitioner.cpp  cb_producer_delivery_report.cpp  cb_producer_event.cpp
src/io/: config_loader.cpp  daily_logger.cpp  kafka_producer.cpp  pcap_parser.cpp  torch_api.cpp
src/packet/: payload.cpp  superpacket.cpp
src/packet/header/: ethernet_header.cpp  icmp_header.cpp  ipv4_header.cpp  ipv6_header.cpp  packet_header.cpp  tcp_header.cpp  udp_header.cpp
